--- a/index.html
+++ b/index.html
@@ -332,6 +332,34 @@
 
 
     <!-- Footer Section -->
-     <footer></footer>
+    <footer class="footer bg-black text-neutral-content items-center lg:justify-between p-4 lg:px-40 lg:pt-14 lg:pb-20">
+      <aside class="">
+        <!-- first line -->
+       <div class="flex gap-6">
+        <p>Download now</p>
+        <p>License</p>
+       </div>
+       <!-- second line -->
+       <nav>
+        <ul class="flex flex-wrap gap-6">
+          <li>About</li>
+          <li>Features</li>
+          <li>Pricing</li>
+          <li>Careers</li>
+          <li>Help</li>
+          <li>Privacy Policy</li>
+        </ul>
+       </nav>
+       <!-- third line -->
+        <p class="text-sm text-[#D9DBE1]">© 2020 bike. All rights reserved</p>
+      </aside>
+      <nav>
+        <h4 class="font-medium text-lg">Get the App</h4>
+        <div class="space-y-4">
+          <img class="w-32" src="images/others/ios.png" alt="">
+          <img class="w-32" src="images/others/android.png" alt="">
+        </div>
+      </nav>
+    </footer>
 </body>
 </html>
